uhm prueba para arregla issue con tablets, en el media query

--- a/CSS/master.css
+++ b/CSS/master.css
@@ -7,6 +7,7 @@
   padding-top: 2em;
   background-image: linear-gradient(#34344f, #000);
   margin-right: 10%;
+  clear: both;
 }
  .titulo1 > h1{
    font-size: 80px;
@@ -22,6 +23,10 @@
   font-size: 25px;
   font-family: 'Recursive', sans-serif;
   font-weight: bold;
+}
+
+footer{
+  display: block;
 }
 
 .contacto2{
@@ -48,30 +53,31 @@
 @media  only screen and (max-width : 1000px) {
 
   .titulo1{
-    height: 70vh;
+    height: 20vh;
     padding: 1em;
     background-image: linear-gradient(#34344f, #000);
-    padding-top: 30%
+    padding-top: 10%
   }
 
   .titulo1 > h1{
-    font-size: 70px;
+    font-size: 5em;
     font-family: 'Anton', cursive;
     margin-bottom: 15px;
   }
 
   .titulo1 > h2 {
-    font-size: 55px;
+    font-size: 3em;
     font-family:'Recursive', sans-serif;
   }
 
  .titulo1 > p {
-   font-size:50px;
+   font-size:2.5em;
    font-family: 'Recursive', sans-serif;
    font-weight: bold;
  }
 
  .contacto2 > a{
+   margin-top: 120vh;
    font-size: 5em;
  }
 }
